# signal-risk-lab

./: .gitignore  ARCHIVE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: engine.py  logging_config.py  main.py
app/domains/advisory/: engine.py  router.py  schemas.py
app/domains/quant/: engine.py  router.py  schemas.py
app/shared/: health.py  schemas.py
app/static/: index.html
architecture/: blueprint.json
artifacts/: latest_signal_report.json
docs/: cloud-ai-architecture.md  index.html
docs/architecture/: blueprint.json
scripts/: build_artifacts.py  exercise_runtime.py  validate_repository_surface.py
signal_risk_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py
