[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-review-platform"
version = "1.0.0"
description = "Domain-driven finance review platform spanning quant signal/risk research and brokerage advisory review."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.0,<3.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
