[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-review-platform"
version = "1.0.0"
description = "Domain-driven finance review platform spanning quant signal/risk research and brokerage advisory review."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "pydantic==2.11.3",
  "uvicorn==0.34.3",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
  "ruff==0.11.4",
  "mypy==1.15.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP007"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
