[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-review-platform"
version = "1.0.0"
description = "Domain-driven finance review platform spanning quant signal/risk research and brokerage advisory review."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Doeon Kim", email = "ehdjs1351@gmail.com"}]
dependencies = [
  "fastapi==0.136.1",
  "pydantic==2.13.3",
  "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "ruff==0.15.12",
  "mypy==1.20.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP007"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
init_always_use_alias = true

[project.urls]
Repository = "https://github.com/KIM3310/signal-risk-lab"
